# Neural-Network-Winter-2024-Final-Project-ChestXRay-Pneumonia

./: Chexnet.ipynb  Efv21.ipynb  InceptionV3[1].ipynb  README.md  inference.ipynb  project-notebook.ipynb  pyproject.toml  requirements.txt  vgg19.ipynb
.ipynb_checkpoints/: project-notebook-checkpoint.ipynb
