[tool.poetry]
name = "neural-network-winter-2024-final-project-chestxray-pneumonia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "2.10"
jupyter = "^1.0.0"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
kaggle = "^1.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
